fix: Height of projects section
Bug:

The projects section was overlapping with the contact section.

Solution:

Change the height of the projects section to auto.

--- a/css/style.css
+++ b/css/style.css
@@ -594,7 +594,7 @@ textarea {
 
   /* Projects section */
   .projects {
-    height: 100%;
+    height: auto;
     display: grid;
     align-items: flex-start;
   }
